# questions

./: .gitignore  Dockerfile  README.md  codegen.ts  nx.json  package.json  tsconfig.base.json
.github/workflows/: deploy.yml
apps/api/: tsconfig.json  webpack.config.js
apps/api/src/: app.ts  main.ts
apps/api/src/lib/: db.d.ts  db.ts  firebase.ts  prisma.ts  supabase.ts
apps/api/src/resolvers/: create-item.ts  create-list.ts  delete-item.ts  get-item-details-by-id.ts  get-items.ts  get-lists.ts  get-product-by-url.ts  get-profile.ts  index.ts  onboarding.ts  update-item-description.ts  update-item.ts
apps/api/src/services/: answer-quiz.ts  check-is-admin.ts  check-is-authenticated.ts  get-product-from-json-ld.ts  get-quizzes.ts  get-secret.ts  get-user-id.ts  signup.ts
apps/backend/: project.json  pyproject.toml  requirements.txt
apps/backend/backend/: app.py  create_app.py  routes.py
apps/backend/backend/libs/: db.py  supabase.py
apps/backend/backend/models/: quiz.py  user.py  user_quiz_attempt.py
apps/backend/backend/services/: answer_quiz.py  get_quizzes.py  get_ranking.py  get_user.py  get_user_id.py  onboard.py  signup.py
apps/web/: .env.example  next.config.js  tailwind.config.js  tsconfig.json
apps/web/src/components/: add-item.tsx  auth.tsx  extension-promotion.tsx  google-icon.tsx  header.tsx  new-list.tsx  onboarding.tsx  shopping-calendar.tsx  signin-dialog.tsx  view-item.tsx
apps/web/supabase/: config.toml
libs/prisma/: README.md  jest.config.ts  project.json  tsconfig.lib.json
libs/prisma/src/: index.ts
(+75 files in other folders)
